--- a/widget.ui
+++ b/widget.ui
@@ -60,6 +60,9 @@
        <widget class="QLineEdit" name="password"/>
       </item>
       <item>
+       <widget class="QLineEdit" name="cap"/>
+      </item>
+      <item>
        <widget class="QPushButton" name="login">
         <property name="text">
          <string>登录</string>
