--- a/widget.ui
+++ b/widget.ui
@@ -129,6 +129,13 @@
        </widget>
       </item>
       <item>
+       <widget class="QPushButton" name="HotData">
+        <property name="text">
+         <string>获取热门数据</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="verticalSpacer_2">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
