重构发送器逻辑，登录注册主界面初步逻辑设计完毕

--- a/window/Register/registerwindow.ui
+++ b/window/Register/registerwindow.ui
@@ -35,13 +35,16 @@
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout" stretch="1,1,0,1">
+     <layout class="QVBoxLayout" name="verticalLayout" stretch="1,0,1,0,1">
       <item>
-       <widget class="QLineEdit" name="lineEdit_2">
+       <widget class="QLineEdit" name="username">
         <property name="text">
          <string>邮箱</string>
         </property>
        </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="passwd"/>
       </item>
       <item>
        <widget class="QFrame" name="frame_2">
@@ -56,14 +59,14 @@
           <number>19</number>
          </property>
          <item>
-          <widget class="QLineEdit" name="lineEdit">
+          <widget class="QLineEdit" name="cap">
            <property name="text">
             <string>验证码</string>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="pushButton_2">
+          <widget class="QPushButton" name="captcha">
            <property name="text">
             <string>发送验证码</string>
            </property>
@@ -73,14 +76,14 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton_3">
+       <widget class="QPushButton" name="ToLogin">
         <property name="text">
          <string>返回登录界面</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="Register">
         <property name="text">
          <string>注册</string>
         </property>
