--- a/window/LoginWindow/loginwindow.ui
+++ b/window/LoginWindow/loginwindow.ui
@@ -53,7 +53,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QLineEdit" name="lineEdit"/>
+          <widget class="QLineEdit" name="username"/>
          </item>
         </layout>
        </widget>
@@ -75,20 +75,20 @@
           </widget>
          </item>
          <item>
-          <widget class="QLineEdit" name="lineEdit_2"/>
+          <widget class="QLineEdit" name="passwd"/>
          </item>
         </layout>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="Login">
         <property name="text">
          <string>登录</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton_2">
+       <widget class="QPushButton" name="ToRegister">
         <property name="text">
          <string>还没有账号？注册一个</string>
         </property>
