--- a/widget.ui
+++ b/widget.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Widget</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,1,1">
+  <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,4,4,1">
    <item>
     <spacer name="horizontalSpacer">
      <property name="orientation">
@@ -26,6 +26,9 @@
       </size>
      </property>
     </spacer>
+   </item>
+   <item>
+    <widget class="LeftList" name="widget" native="true"/>
    </item>
    <item>
     <widget class="QFrame" name="frame">
@@ -166,6 +169,14 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>LeftList</class>
+   <extends>QWidget</extends>
+   <header location="global">LeftList.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
