--- a/window/Main/newcourieritem.ui
+++ b/window/Main/newcourieritem.ui
@@ -191,6 +191,9 @@
      <height>24</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
    <property name="text">
     <string>下载</string>
    </property>
@@ -203,6 +206,9 @@
      <width>41</width>
      <height>24</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
    </property>
    <property name="text">
     <string>播放</string>
