--- a/window/Main/newcourieritem.ui
+++ b/window/Main/newcourieritem.ui
@@ -29,9 +29,9 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>130</x>
+     <x>110</x>
      <y>30</y>
-     <width>151</width>
+     <width>131</width>
      <height>19</height>
     </rect>
    </property>
@@ -89,10 +89,10 @@
   <widget class="QWidget" name="layoutWidget_2">
    <property name="geometry">
     <rect>
-     <x>372</x>
+     <x>330</x>
      <y>30</y>
-     <width>331</width>
-     <height>22</height>
+     <width>344</width>
+     <height>26</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -130,6 +130,16 @@
       </property>
       <property name="text">
        <string>MusicLikeCount</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="like">
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="text">
+       <string>点赞</string>
       </property>
      </widget>
     </item>
@@ -185,7 +195,7 @@
   <widget class="QPushButton" name="download">
    <property name="geometry">
     <rect>
-     <x>330</x>
+     <x>280</x>
      <y>30</y>
      <width>41</width>
      <height>24</height>
@@ -201,7 +211,7 @@
   <widget class="QPushButton" name="play">
    <property name="geometry">
     <rect>
-     <x>280</x>
+     <x>240</x>
      <y>30</y>
      <width>41</width>
      <height>24</height>
